removed graph_type

--- a/notebooks/evaluation-brian.ipynb
+++ b/notebooks/evaluation-brian.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "c2465925",
+   "execution_count": 1,
+   "id": "bcd3c632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,8 +13,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3bb6ba3f",
+   "execution_count": 2,
+   "id": "dc834a19",
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfa9686b",
+   "id": "bd651415",
    "metadata": {},
    "source": [
     "# Generate Graphs and Statistics\n",
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c5bf9f8b",
+   "execution_count": 3,
+   "id": "3e3f0a19",
    "metadata": {},
    "outputs": [
     {
@@ -82,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "47dda858",
+   "execution_count": 4,
+   "id": "b389ddeb",
    "metadata": {
     "scrolled": true
    },
@@ -484,7 +484,7 @@
        "[297 rows x 33 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5669457e",
+   "id": "743e6373",
    "metadata": {},
    "source": [
     "# Prepare Data for Predicate Learning"
@@ -503,8 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5e4293bc",
+   "execution_count": 5,
+   "id": "a7250cef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,8 +513,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "8844a752",
+   "execution_count": 6,
+   "id": "2e14ed03",
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +556,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,8 +567,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "bf4e333f",
+   "execution_count": 7,
+   "id": "7306d3a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,8 +577,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "487ec1d3",
+   "execution_count": 8,
+   "id": "438310b3",
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +620,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +631,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5e17ca",
+   "id": "ceaed4d3",
    "metadata": {},
    "source": [
     "**Only use attributes that do not contain null values and have a standard deviation > 0:**"
@@ -639,8 +639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "0db8a401",
+   "execution_count": 9,
+   "id": "bf586b61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,8 +649,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "6c7e4234",
+   "execution_count": 10,
+   "id": "62691b17",
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +692,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd8c8567",
+   "id": "fdb6eb95",
+   "metadata": {},
+   "source": [
+    "**Exclude the nominal attribute `graph_type`**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "b47c27f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attr_use['graph_type'] = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24955ceb",
    "metadata": {},
    "source": [
     "**Excluded Attributes:**"
@@ -711,21 +729,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "dcb02fef",
+   "execution_count": 101,
+   "id": "816eeadf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['is_directed_int', 'has_spatial_attributes', 'has_temporal_attributes',\n",
-       "       'is_planar', 'communities', 'assortativity', 's_metric', 'sigma',\n",
-       "       'node_types', 'node_attributes', 'edge_types', 'edge_attributes',\n",
-       "       'n_parallel_edges', 'n_self_loops'],\n",
+       "Index(['graph_type', 'is_directed_int', 'has_spatial_attributes',\n",
+       "       'has_temporal_attributes', 'is_planar', 'communities', 'assortativity',\n",
+       "       's_metric', 'sigma', 'node_types', 'node_attributes', 'edge_types',\n",
+       "       'edge_attributes', 'n_parallel_edges', 'n_self_loops'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -736,8 +754,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ae69f9a8",
+   "execution_count": 102,
+   "id": "f72bc925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,23 +764,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "71049b99",
+   "execution_count": 103,
+   "id": "9f30da41",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['graph_type', 'is_bipartite', 'n_components',\n",
-       "       'avg_betweenness_centrality', 'avg_closeness_centrality',\n",
-       "       'avg_eigenvector_centrality', 'avg_degree', 'std_degree',\n",
-       "       'clustering_coefficient', 'transitivity', 'modularity',\n",
+       "Index(['is_bipartite', 'n_components', 'avg_betweenness_centrality',\n",
+       "       'avg_closeness_centrality', 'avg_eigenvector_centrality', 'avg_degree',\n",
+       "       'std_degree', 'clustering_coefficient', 'transitivity', 'modularity',\n",
        "       'avg_shortest_path_length', 'radius', 'diameter', 'vertex_connectivity',\n",
        "       'eccentricity_avg', 'n_nodes', 'number_of_isolates', 'density'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,17 +790,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "2ad93886",
+   "execution_count": 104,
+   "id": "0d40eabf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "19"
+       "18"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0839b327",
+   "id": "3820c12f",
    "metadata": {},
    "source": [
     "# Load Expert Predicates"
@@ -802,8 +819,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "db62968c",
+   "execution_count": 105,
+   "id": "bdd058c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,7 +829,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce986e4a",
+   "id": "95fb6843",
    "metadata": {},
    "source": [
     "**List of predicates for each vis type:**"
@@ -820,9 +837,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "b975471f",
-   "metadata": {},
+   "execution_count": 106,
+   "id": "1de557d4",
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -863,7 +882,7 @@
        "  {'edge_attributes': [0, 2]}]}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +893,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdad1791",
+   "id": "7acb26d9",
    "metadata": {},
    "source": [
     "**Vis type label for each graph:**"
@@ -882,8 +901,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "80afa9f4",
+   "execution_count": 107,
+   "id": "50e1dd88",
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +922,7 @@
        "Length: 297, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20b6050b",
+   "id": "6c4ae1ae",
    "metadata": {},
    "source": [
     "For each graph, each vis type gets one point for a matching predicate. The vis type with the most total points/matching predicates is chosen as the label."
@@ -922,7 +941,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62aaafd7",
+   "id": "f115495a",
    "metadata": {},
    "source": [
     "# Learn Predicates"
@@ -930,8 +949,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "34f4a0cd",
+   "execution_count": 108,
+   "id": "60864967",
    "metadata": {
     "scrolled": true
    },
@@ -940,59 +959,243 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[   0] loss 3.3214240074157715\n",
-      "[ 100] loss 9.225895881652832\n",
-      "[ 200] loss 9.427505493164062\n",
-      "[ 300] loss 0.22784195840358734\n",
-      "[ 400] loss 0.1697160005569458\n",
-      "[ 500] loss 0.19681721925735474\n",
-      "[ 600] loss 0.24632522463798523\n",
-      "[ 700] loss 0.3140135109424591\n",
-      "[ 800] loss 0.3935486078262329\n",
-      "[ 900] loss 0.47320684790611267\n",
+      "[   0] loss 2.674076557159424\n",
+      "[ 100] loss 1.0870511531829834\n",
+      "[ 200] loss 0.8246506452560425\n",
+      "[ 300] loss 0.8227745890617371\n",
+      "[ 400] loss 0.8139647841453552\n",
+      "[ 500] loss 0.8101377487182617\n",
+      "[ 600] loss 0.8114305734634399\n",
+      "[ 700] loss 0.8147532939910889\n",
+      "[ 800] loss 0.8184369802474976\n",
+      "[ 900] loss 0.8213256597518921\n",
       "\n",
       "brush = 0\n",
-      "accuracy = 0.7811447811447811\n",
-      "precision = 0.2261904761904762\n",
-      "recall = 1.0\n",
-      "f1 = 0.3689320388349515\n",
+      "accuracy = 0.8282828282828283\n",
+      "precision = 0.8921568627450981\n",
+      "recall = 0.8625592417061612\n",
+      "f1 = 0.8771084337349399\n",
       "\n",
-      "[   0] loss 2.5393917560577393\n",
-      "[ 100] loss 0.6756349205970764\n",
-      "[ 200] loss 0.2764913737773895\n",
-      "[ 300] loss 0.21806229650974274\n",
-      "[ 400] loss 0.19411863386631012\n",
-      "[ 500] loss 0.18646377325057983\n",
-      "[ 600] loss 0.19039420783519745\n",
-      "[ 700] loss 0.19553092122077942\n",
-      "[ 800] loss 0.199416846036911\n",
-      "[ 900] loss 0.20200425386428833\n",
+      "[   0] loss 3.294844627380371\n",
+      "[ 100] loss 1.7169829607009888\n",
+      "[ 200] loss 1.3372739553451538\n",
+      "[ 300] loss 1.264787197113037\n",
+      "[ 400] loss 1.2419618368148804\n",
+      "[ 500] loss 1.2306944131851196\n",
+      "[ 600] loss 1.223823070526123\n",
+      "[ 700] loss 1.2191402912139893\n",
+      "[ 800] loss 1.2157268524169922\n",
+      "[ 900] loss 1.213122844696045\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.6666666666666666\n",
+      "precision = 0.4624277456647399\n",
+      "recall = 0.9302325581395349\n",
+      "f1 = 0.6177606177606177\n",
+      "\n",
+      "[   0] loss 2.782708168029785\n",
+      "[ 100] loss 1.296474575996399\n",
+      "[ 200] loss 1.0161536931991577\n",
+      "[ 300] loss 0.912499725818634\n",
+      "[ 400] loss 0.8730745315551758\n",
+      "[ 500] loss 0.8499098420143127\n",
+      "[ 600] loss 0.8382788300514221\n",
+      "[ 700] loss 0.8340626358985901\n",
+      "[ 800] loss 0.8326666355133057\n",
+      "[ 900] loss 0.8322991728782654\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.797979797979798\n",
+      "precision = 0.9695431472081218\n",
+      "recall = 0.7795918367346939\n",
+      "f1 = 0.8642533936651585\n",
+      "\n",
+      "[   0] loss 3.2696926593780518\n",
+      "[ 100] loss 7.189657211303711\n",
+      "[ 200] loss 10.269099235534668\n",
+      "[ 300] loss 8.190837860107422\n",
+      "[ 400] loss 0.16782574355602264\n",
+      "[ 500] loss 0.1962262988090515\n",
+      "[ 600] loss 0.24547307193279266\n",
+      "[ 700] loss 0.3128710687160492\n",
+      "[ 800] loss 0.3922395408153534\n",
+      "[ 900] loss 0.4720005393028259\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.7845117845117845\n",
+      "precision = 0.2289156626506024\n",
+      "recall = 1.0\n",
+      "f1 = 0.37254901960784315\n",
+      "\n",
+      "[   0] loss 2.515228033065796\n",
+      "[ 100] loss 0.6374296545982361\n",
+      "[ 200] loss 0.26279985904693604\n",
+      "[ 300] loss 0.2158423811197281\n",
+      "[ 400] loss 0.19256462156772614\n",
+      "[ 500] loss 0.18612423539161682\n",
+      "[ 600] loss 0.1902599334716797\n",
+      "[ 700] loss 0.19547384977340698\n",
+      "[ 800] loss 0.19940157234668732\n",
+      "[ 900] loss 0.20201079547405243\n",
       "\n",
       "brush = 0\n",
       "accuracy = 0.9663299663299664\n",
       "precision = 1.0\n",
       "recall = 0.9640287769784173\n",
       "f1 = 0.9816849816849818\n",
+      "\n",
+      "[   0] loss 100.0\n",
+      "[   0] loss 2.6501379013061523\n",
+      "[ 100] loss 1.2348638772964478\n",
+      "[ 200] loss 0.8031672239303589\n",
+      "[ 300] loss 0.6824121475219727\n",
+      "[ 400] loss 0.668829619884491\n",
+      "[ 500] loss 0.6686468124389648\n",
+      "[ 600] loss 0.6689989566802979\n",
+      "[ 700] loss 0.6692558526992798\n",
+      "[ 800] loss 0.6694120168685913\n",
+      "[ 900] loss 0.6695030927658081\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.7811447811447811\n",
+      "precision = 1.0\n",
+      "recall = 0.7743055555555556\n",
+      "f1 = 0.87279843444227\n",
+      "\n",
+      "[   0] loss 2.878807783126831\n",
+      "[ 100] loss 6.228124141693115\n",
+      "[ 200] loss 0.8632591366767883\n",
+      "[ 300] loss 0.1254623532295227\n",
+      "[ 400] loss 0.13054771721363068\n",
+      "[ 500] loss 0.16256393492221832\n",
+      "[ 600] loss 0.2080327421426773\n",
+      "[ 700] loss 0.2635800540447235\n",
+      "[ 800] loss 0.3162548840045929\n",
+      "[ 900] loss 0.3477291166782379\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.8552188552188552\n",
+      "precision = 0.12244897959183673\n",
+      "recall = 1.0\n",
+      "f1 = 0.2181818181818182\n",
+      "\n",
+      "[   0] loss 2.590423583984375\n",
+      "[ 100] loss 0.6735891103744507\n",
+      "[ 200] loss 0.3314661681652069\n",
+      "[ 300] loss 0.23004284501075745\n",
+      "[ 400] loss 0.20942391455173492\n",
+      "[ 500] loss 0.20808322727680206\n",
+      "[ 600] loss 0.2076517641544342\n",
+      "[ 700] loss 0.20739410817623138\n",
+      "[ 800] loss 0.20722807943820953\n",
+      "[ 900] loss 0.20713278651237488\n",
+      "\n",
+      "brush = 0\n",
+      "accuracy = 0.9562289562289562\n",
+      "precision = 1.0\n",
+      "recall = 0.9553264604810997\n",
+      "f1 = 0.977152899824253\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "learned_predicates = get_predicates_labels(df, attr, predicates_labels['labels'], label_names=['NODELINK'], n_iter=1000)"
+    "learned_predicates = get_predicates_labels(df, attr_, predicates_labels['labels'], n_iter=1000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "da0fc245",
+   "execution_count": 93,
+   "id": "124f07b9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['MATRIX', 'PAOHVIS', 'NODELINK', 'NODETRIX', 'CHORD_DIAGRAM'])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "learned_predicates.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "5268a472",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "MATRIX\n",
+      "PAOHVIS\n",
       "NODELINK\n",
-      "({'avg_degree': [0.003195298575763901, 0.02762993474337021], 'vertex_connectivity': [0.0, 0.011834319526627219]}, {'n_components': [0.0, 0.10526315789473684], 'avg_betweenness_centrality': [0.0, 0.15302101895213127], 'eccentricity_avg': [0.23305794596672058, 0.7996454536914825], 'number_of_isolates': [0.0, 0.18181818181818182]})\n"
+      "NODETRIX\n",
+      "CHORD_DIAGRAM\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in learned_predicates.keys():\n",
+    "    try:\n",
+    "        print(key)\n",
+    "        pd.Series(learned_predicates[key][0][0]['params'][0][0].detach().numpy()).isnull()\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "id": "01fb67e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['is_bipartite', 'n_components', 'number_of_isolates'], dtype='object')"
+      ]
+     },
+     "execution_count": 111,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attr[[0, 1, -2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "3879417f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MATRIX\n",
+      "({'n_components': [0.0, 0.10526315789473684], 'avg_betweenness_centrality': [0.0, 0.1338050328195095], 'avg_eigenvector_centrality': [0.00829293260219581, 0.42838944494724274], 'std_degree': [0.03997473384403583, 0.7610229551792145], 'diameter': [0.10262876749038696, 0.5672981142997742], 'number_of_isolates': [0.0, 0.18181818181818182]}, {'clustering_coefficient': [0.0, 0.6284277439117432]})\n",
+      "PAOHVIS\n",
+      "({}, {'std_degree': [0.0, 0.6946551203727722], 'diameter': [0.0, 0.5875054746866226]})\n",
+      "NODELINK\n",
+      "({'avg_degree': [0.003195298575763901, 0.02762993474337021], 'vertex_connectivity': [0.0, 0.011834319526627219]}, {'n_components': [0.0, 0.10526315789473684], 'avg_betweenness_centrality': [0.0, 0.15302516520023346], 'eccentricity_avg': [0.23331156373023987, 0.7999769151210785], 'number_of_isolates': [0.0, 0.18181818181818182]})\n",
+      "NODETRIX\n",
+      "({0: {'params': (tensor([[    nan,     nan,  0.5385, -0.0594,  0.9583, -0.9628, -1.0104, -0.0983,\n",
+      "         -0.1269, -0.0706,  0.3192, -0.0260,  0.4805, -0.8893,  0.4073, -1.3341,\n",
+      "             nan, -0.1606]], requires_grad=True), tensor([[    nan,     nan,  2.2311,  1.2629,  1.8928, 25.9559,  2.7117,  1.0980,\n",
+      "          1.1165,  6.4173,  2.3473,  2.0492,  2.2626, 16.7132,  1.7129,  6.2480,\n",
+      "             nan,  1.0925]], requires_grad=True)), 'loss': tensor(100., grad_fn=<BinaryCrossEntropyBackward0>), 'total_loss': tensor(100., grad_fn=<AddBackward0>)}}, {'n_nodes': [0.25191184878349304, 1.0]})\n",
+      "CHORD_DIAGRAM\n",
+      "({'n_components': [0.0, 0.05263157894736842], 'avg_betweenness_centrality': [0.0, 0.25524475524475504], 'avg_degree': [0.0, 0.02064654464339752], 'modularity': [0.0, 0.384], 'vertex_connectivity': [0.0, 0.01775147928994083], 'n_nodes': [0.0, 0.05583756345177665]}, {'avg_betweenness_centrality': [0.0, 0.20839916542172432], 'avg_eigenvector_centrality': [0.0, 0.39539385586977005]})\n"
      ]
     }
    ],
